# django-public-admin

./: .gitignore  .readthedocs.yaml  CHANGELOG  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yaml  tests.yml
docs/: api.rst  conf.py  example.rst  index.rst  requirements.txt  usage.rst
example/: settings.py  urls.py
example/my_open_house/: admin.py  apps.py  models.py  public_admin.py
example/my_open_house/management/commands/: cleanexample.py  runexample.py
example/my_open_house/migrations/: 0001_initial.py
public_admin/: admin.py  exceptions.py  sites.py
public_admin/templates/: index.html
public_admin/templates/admin/: base.html
tests/: __init__.py  settings.py  test_dummy_user.py  test_public_admin_site.py  test_public_app.py  test_public_model_admin.py
