[tool.poetry]
name = "django-public-admin"
version = "0.0.6"
description = "A public read-only version of the Django Admin"
authors = ["Eduardo Cuducos <cuducos@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cuducos/django-public-admin"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
packages = [
    {include = "public_admin"}
]

[tool.poetry.dependencies]
python = "^3.9"
django = ">=4.2"

[tool.poetry.group.dev.dependencies]
pytest-ruff = "^0.4.1"
tox = "^4.18.0"

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
