[project]
name = "django-public-admin"
version = "0.0.6"
description = "A public read-only version of the Django Admin"
authors = [{name = "Eduardo Cuducos", email = "4732915+cuducos@users.noreply.github.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development",
]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
]

[project.urls]
Repository = "https://github.com/cuducos/django-public-admin"

[tool.pytest.ini_options]
addopts = "--ruff --ruff-format"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["public_admin",]

[tool.uv]
dev-dependencies = [
    "pytest-ruff>=0.4.1",
    "tox>=4.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
